--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "parcel-plugin-build-colors-json",
+  "name": "@channel-io/parcel-plugin-build-colors-json",
   "version": "0.0.2",
   "description": "Library suite for building colors-json of channel-colors.",
   "main": "index.js",
