--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@channel-io/parcel-plugin-json",
-  "version": "0.0.0",
+  "name": "parcel-plugin-colors-json",
+  "version": "0.0.1",
   "description": "Library suite for building colors-json of channel-colors.",
   "main": "index.js",
   "scripts": {
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/zoyi/-channel-io-parcel-plugin-json.git"
+    "url": "https://github.com/zoyi/parcel-plugin-colors-json.git"
   },
   "keywords": [
     "parcel",
@@ -18,9 +18,9 @@
   "author": "Team Channel.io",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/zoyi/-channel-io-parcel-plugin-json/issues"
+    "url": "https://github.com/zoyi/parcel-plugin-colors-json/issues"
   },
-  "homepage": "https://github.com/zoyi/-channel-io-parcel-plugin-json#readme",
+  "homepage": "https://github.com/zoyi/parcel-plugin-colors-json#readme",
   "devDependencies": {
     "jest": "^24.9.0"
   }
