--- a/package.json
+++ b/package.json
@@ -2,13 +2,16 @@
   "name": "parcel-plugin-colors-json",
   "version": "0.0.1",
   "description": "Library suite for building colors-json of channel-colors.",
-  "main": "index.js",
+  "main": "./lib/index.js",
   "scripts": {
     "test": "jest --passWithNoTests"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/zoyi/parcel-plugin-colors-json.git"
+  },
+  "engines": {
+    "node": ">= 8.0.0"
   },
   "keywords": [
     "parcel",
